# android_template_slint_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-generate.toml
.cargo/: config.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/slint_app/app/: MainActivity.java  MainActivity.kt
android/app/src/main/java/slint/router/: JNINavigationHandler.java
android/app/src/main/res/values/: strings.xml
crates/slint-android/: Cargo.toml  build.rs
crates/slint-android/src/: lib.rs  navigation_handler.rs
crates/slint-android/ui/: app.slint
crates/slint-ui/: Cargo.toml  build.rs
crates/slint-ui/ui/: PageNavigator.slint  UI.slint
crates/slint-ui/ui/components/: Button.slint  Card.slint  IconButton.slint  Input.slint  Navbar.slint  Separator.slint  VerificationCodeInput.slint
crates/slint-ui/ui/layouts/: HomeLayout.slint
crates/slint-ui/ui/pages/: Counter.slint  Settings.slint  TicTacToe.slint
crates/slint-ui/ui/theme/: AssetTable.slint  Palette.slint  Spacing.slint  Typography.slint
scripts/: android.sh  build-android.sh
