[workspace]
resolver = "2"
members = [
	"crates/slint-android",
	"crates/slint-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Javier Contreras"]
license = "MIT"
repository = "https://github.com/javiercont97/android_template_slint_rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
url = "2.5"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI Framework
slint = "1.14"

