[package]
name = "slint-android"
description = "Android app library using Slint and Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Internal dependencies
# (Add your internal dependencies here if needed)
slint-ui = { path = "../slint-ui" }

# UI Framework
slint = { workspace = true, features = ["backend-android-activity-06"] }

# Async runtime - use current_thread for Android
tokio = { version = "1.41", features = ["rt", "sync", "time"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Android integration
i-slint-backend-android-activity = "1.14"

# JNI support
jni = "0.21"

# Once cell for global static initialization
once_cell = "1.19"

[build-dependencies]
slint-build = "1.14"
